--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
-<head><b><h1>Informatica</h1></b></head>
+<head><b><h1>FelixInformatica</h1></b></head>
 <title>Informatica</title>
-
 
 <body>
  
@@ -9,10 +8,10 @@
 
 <font color=#FF0000> <font size=5> Conceptual
 
-<center> <img src=¨imagenjpg1¨> </centrer>
+<center> <img src=¨https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2019/07/origen-nombres-informatica-nunca-hubieras-imaginado_2.jpg¨> </centrer>
 
 
 
 </body>
 
-</html>
+</html>  
