--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<head><b><h1>FelixInformatica</h1></b></head>
-<title>Informatica</title>
+<head><b><h1>Informatica</h1></b></head>
+<title>FelixInformatica</title>
 
 <body>
  
@@ -14,4 +14,5 @@
 
 </body>
 
-</html>  
+</html> 
+  
