--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  
 <p>Hola! Bienvenido a mi primera pagina web. La Informática es la rama de la Ingeniería que estudia el hardware, las redes de datos y el software necesarios para tratar información de forma automática. Aunque pueda parecerte una definición muy abstracta, estamos seguros de que sabes mucho más de Informática de lo que crees
 La informática o computación es una ciencia que está centrada en el tratamiento, uso y automatización de la información. Se encarga de analizar e investigar el hardware, las redes de datos y el software ya que son partes imprescindibles para automatizar los datos y conseguir los objetivos de esta ciencia.
-<font color=#FF0000> <font size=5> Conceptual
+<font color=#FF0000> <font size=5> 
 
 <center> <img src=¨https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2019/07/origen-nombres-informatica-nunca-hubieras-imaginado_2.jpg¨> </centrer>
 
