--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@ La informática o computación es una ciencia que está centrada en el tratamien
  
 <font color=#FF0000> <font size=5> 
 
-<center> <img src=¨https://cdn.computerhoy.com/sites/navi.axelspringer.es/public/media/image/2019/07/origen-nombres-informatica-nunca-hubieras-imaginado_2.jpg¨> </centrer>
-
-
+ <img src=¨felix.jpg¨
 
 </body>
 
